Updated server with websocket support

--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,23 @@
     <groupId>de.bht.minimailbox</groupId>
     <artifactId>MiniMailbox</artifactId>
     <version>1.0</version>
+    <repositories>
+        <repository>
+            <id>org.eclipse.jetty</id>
+            <name>Jetty Eclipse Repository</name>
+            <url>http://mvnrepository.com/artifact/org.eclipse.jetty</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>9.3.6.v20151106</version>
         </dependency>
     </dependencies>
 </project>
